--- a/4CHLED/firmware/Makefile
+++ b/4CHLED/firmware/Makefile
@@ -65,10 +65,8 @@ clean:
 #########################################################################
 
 flash: all
-	avrdude -F -p $(MCU_AVRDUDE) -P $(USB_DEVICE) -c stk500v2    -U flash:w:$(PROJECT).hex
-	#avrdude -p $(MCU_AVRDUDE) -c usbtiny    -U flash:w:$(PROJECT).hex
+	avrdude -p $(MCU_AVRDUDE) -c usbtiny    -U flash:w:$(PROJECT).hex
 
 fuse:
-	avrdude -F -p $(MCU_AVRDUDE) -P $(USB_DEVICE) -c stk500v2    $(FUSE_SETTINGS)
-	#avrdude -p $(MCU_AVRDUDE) -c usbtiny    $(FUSE_SETTINGS)
+	avrdude -p $(MCU_AVRDUDE) -c usbtiny    $(FUSE_SETTINGS)
 
